# FileConverter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  REWRITE_PLAN.md  Settings.default.xml  installer.nsi
.github/workflows/: ci.yml  release.yml
file_converter_bin/: Cargo.toml  build.rs
file_converter_bin/src/: index.html  main.rs
file_converter_core/: Cargo.toml
file_converter_core/src/: cda.rs  error.rs  ffmpeg.rs  ffmpeg_download.rs  image.rs  imagemagick.rs  lib.rs  office.rs  path_helpers.rs  pdf_compress.rs  scheduler.rs  settings.rs  types.rs
file_converter_core/tests/: settings_and_presets.rs
file_converter_shell/: Cargo.toml
file_converter_shell/src/: lib.rs
