[package]
name = "file_converter_bin"
version = "0.4.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
file_converter_core = { path = "../file_converter_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
winres = "0.1"
