[package]
name = "file_converter_shell"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
file_converter_core = { path = "../file_converter_core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_LibraryLoader"] }
